# houdini-downloader

./: .gitignore  Cargo.toml  README.md  p.py
api/: Cargo.toml
api/src/: lib.rs
cmd/: Cargo.toml
cmd/src/: args.rs  main.rs
downloader-api/: Cargo.toml
downloader-api/src/: lib.rs
downloader-bin/: Cargo.toml
downloader-bin/src/: main.rs
