[package]
name = "houdini-downloader-api"
version = "0.1.0"
edition = "2021"
authors = ["Aleksei Rusev"]
description = "API for downloading SideFx Houdini installers"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
dirs = "5.0.1"
bytes = "1.5.0"
