[package]
name = "downloader-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
serde-this-or-that = "0.4.2"
