[package]
name = "houdini-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
tokio = { version = "1.35.0", features = ["rt", "macros"] }
downloader-api = {path = "../downloader-api"}
futures-util = "0.3.29"
#bytes = "1.5.0"
reqwest = { version = "0.11.22", features = ["stream"] }
anyhow = "1.0.75"
owo-colors = "4.0.0-rc.1"
